Add some descriptions

--- a/teams/conda-incubator/bots.yml
+++ b/teams/conda-incubator/bots.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/bots
-description:
+description: Special team to permission bots and automations across repositories.
 charter:
 requirements:
 scopes:
