--- a/teams/conda-incubator/conda-oci.yml
+++ b/teams/conda-incubator/conda-oci.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-oci
-description:
+description: Maintainers of `conda-oci`
 charter:
 requirements:
 scopes:
