--- a/teams/conda-incubator/condastats.yml
+++ b/teams/conda-incubator/condastats.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/condastats
-description:
+description: Maintainers of `condastats`
 charter:
 requirements:
 scopes:
