--- a/teams/conda/prefix-dev.yml
+++ b/teams/conda/prefix-dev.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/prefix-dev
-description:
+description: Contributors working for Prefix.dev
 charter:
 requirements:
 scopes:
