--- a/teams/conda-incubator/conda-colab.yml
+++ b/teams/conda-incubator/conda-colab.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-colab
-description:
+description: Maintainers of `condacolab`
 charter:
 requirements:
 scopes:
