--- a/teams/conda-incubator/conda-lockfiles.yml
+++ b/teams/conda-incubator/conda-lockfiles.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-lockfiles
-description:
+description: Maintainers of `conda-lockfiles`
 charter:
 requirements:
 scopes:
