--- a/teams/conda-incubator/conda-mirror.yml
+++ b/teams/conda-incubator/conda-mirror.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-mirror
-description:
+description: Maintainers of `conda-mirror`
 charter:
 requirements:
 scopes:
