--- a/teams/conda-incubator/conda-protect.yml
+++ b/teams/conda-incubator/conda-protect.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-protect
-description:
+description: Maintainers of `conda-protect`
 charter:
 requirements:
 scopes:
