--- a/teams/conda-incubator/conda-rattler-solver.yml
+++ b/teams/conda-incubator/conda-rattler-solver.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-rattler-solver
-description:
+description: Maintainers of `conda-rattler-solver`
 charter:
 requirements:
 scopes:
