--- a/teams/conda-incubator/conda-rich.yml
+++ b/teams/conda-incubator/conda-rich.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-rich
-description:
+description: Maintainers of `conda-rich`
 charter:
 requirements:
 scopes:
