--- a/teams/conda-incubator/conda-tutorial.yml
+++ b/teams/conda-incubator/conda-tutorial.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-tutorial
-description:
+description: Maintainers of the `conda-tutorial` repository
 charter:
 requirements:
 scopes:
