--- a/teams/conda/conda-dot-org.yml
+++ b/teams/conda/conda-dot-org.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/conda-dot-org
-description:
+description: Team responsible for the conda.org website maintenance
 charter:
 requirements:
 scopes:
