--- a/teams/conda/conda-maintainers-project-management.yml
+++ b/teams/conda/conda-maintainers-project-management.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/conda-maintainers-project-management
-description:
+description: Support team for @conda/conda-maintainers, with triage permissions only
 charter:
 requirements:
 scopes:
