--- a/teams/conda/grayskull.yml
+++ b/teams/conda/grayskull.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/grayskull
-description:
+description: Maintainers of `grayskull`
 charter:
 requirements:
 scopes:
