Fill in some more teams

--- a/teams/conda-incubator/code-of-conduct.yml
+++ b/teams/conda-incubator/code-of-conduct.yml
@@ -1,6 +1,6 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/code-of-conduct
-description: Code of conduct commitee
+description: Code of conduct committee
 charter:
 requirements:
 scopes:
