--- a/teams/conda/quansight.yml
+++ b/teams/conda/quansight.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/quansight
 description: Contributors working for Quansight
-charter:
+charter: dynamic
 requirements:
 scopes:
   codeowners:
@@ -10,9 +10,10 @@ scopes:
     - conda/conda-planning
   other:
 links:
+  - https://github.com/conda/governance/issues/225
 members:
-  soapy1:
-  jaimergp:
-  peytondmurray:
-  trallard:
+  soapy1: https://github.com/conda/governance/issues/225
+  jaimergp: https://github.com/conda/governance/issues/225
+  peytondmurray: https://github.com/conda/governance/issues/225
+  trallard: https://github.com/conda/governance/issues/225
 emeritus:
