--- a/teams/conda-incubator/conda-checkpoints.yml
+++ b/teams/conda-incubator/conda-checkpoints.yml
@@ -1,13 +1,14 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-checkpoints
 description: Maintainers of `conda-checkpoints`
-charter:
+charter: dynamic
 requirements:
 scopes:
   codeowners:
     - conda-incubator/conda-checkpoints
   other:
 links:
+  - https://github.com/conda/governance/issues/144
 members:
   jaimergp:
 emeritus:
