--- a/teams/conda-incubator/conda-spawn.yml
+++ b/teams/conda-incubator/conda-spawn.yml
@@ -1,13 +1,14 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/conda-spawn
 description: Maintainers of `conda-spawn`
-charter:
+charter: dynamic
 requirements:
 scopes:
   codeowners:
     - conda-incubator/conda-spawn
   other:
 links:
+  - https://github.com/conda/governance/issues/202
 members:
-  jaimergp:
+  jaimergp: https://github.com/conda/governance/issues/202
 emeritus:
