--- a/teams/conda/anaconda.yml
+++ b/teams/conda/anaconda.yml
@@ -1,23 +1,24 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/anaconda
 description: People working at Anaconda.
-charter:
-requirements:
+charter: dynamic
+requirements: Members must be employed by Anaconda.
 scopes:
   codeowners:
     - conda/conda-planning
   other:
 links:
+  - https://github.com/conda/governance/issues/222
 members:
-  jezdez:
-  dholth:
-  ryanskeith:
-  travishathaway:
-  schuylermartin45:
-  chenghlee:
-  kenodegard:
-  george-lorch:
-  danyeaw:
-  marcoesters:
-  ForgottenProgramme:
+  jezdez: https://github.com/conda/governance/issues/222
+  dholth: https://github.com/conda/governance/issues/222
+  ryanskeith: https://github.com/conda/governance/issues/222
+  travishathaway: https://github.com/conda/governance/issues/222
+  schuylermartin45: https://github.com/conda/governance/issues/222
+  chenghlee: https://github.com/conda/governance/issues/222
+  kenodegard: https://github.com/conda/governance/issues/222
+  george-lorch: https://github.com/conda/governance/issues/222
+  danyeaw: https://github.com/conda/governance/issues/222
+  marcoesters: https://github.com/conda/governance/issues/222
+  ForgottenProgramme: https://github.com/conda/governance/issues/222
 emeritus:
