--- a/teams/conda/constructor.yml
+++ b/teams/conda/constructor.yml
@@ -23,7 +23,7 @@ members:
   jaimergp: https://github.com/conda/governance/issues/53
   jezdez: https://github.com/conda/governance/issues/53
   larsoner: https://github.com/conda/governance/issues/53
-  marcoesters: # missing record of decision?
+  marcoesters: https://github.com/conda/constructor/issues/790
   mcg1969: https://github.com/conda/governance/issues/53 # missing from team?
   pseudoyim: https://github.com/conda/governance/issues/53
   travishathaway: # missing record of decision?
