--- a/teams/conda/rattler.yml
+++ b/teams/conda/rattler.yml
@@ -1,17 +1,19 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/rattler
 description: Maintainers of `rattler`
-charter:
+charter: dynamic
 requirements:
 scopes:
   codeowners:
     - conda/rattler
   other:
 links:
+  - https://github.com/conda/governance/issues/145
+  - https://github.com/conda/rattler/issues/799
 members:
-  wolfv:
-  baszalmstra:
-  ruben-arts:
-  nichmor:
+  wolfv: https://github.com/conda/governance/issues/145
+  baszalmstra: https://github.com/conda/governance/issues/145
+  ruben-arts: https://github.com/conda/governance/issues/145
+  nichmor: https://github.com/conda/governance/issues/145
   Hofer-Julian:
 emeritus:
