add viniciusdc to conda-store

--- a/teams/conda-incubator/conda-store.yml
+++ b/teams/conda-incubator/conda-store.yml
@@ -21,6 +21,7 @@ members:
   trallard: https://github.com/conda/governance/issues/106
   pavithraes: https://github.com/conda/governance/issues/106
   smeragoel: https://github.com/conda/governance/issues/106
+  viniciusdc: https://github.com/conda-incubator/conda-store/issues/1115
 emeritus:
   pierrotsmnrd:
   costrouc:
