--- a/teams/conda-incubator/bots.yml
+++ b/teams/conda-incubator/bots.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda-incubator/bots
-description: Special team to permission bots and automations across repositories.
+description: Special team to permission bots and automations across 
+  repositories.
 charter:
 requirements:
 scopes:
