--- a/teams/conda/builds-tools.yml
+++ b/teams/conda/builds-tools.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/builds-tools
-description: Team to work on conda-build and other build tools in the conda ecosystem
+description: Team to work on conda-build and other build tools in the conda 
+  ecosystem
 charter: project
 requirements:
 scopes:
@@ -13,8 +14,8 @@ links:
   - https://github.com/conda/conda-build/issues/4698
   - https://github.com/conda/governance/issues/128
 members:
-  beeankha: https://github.com/conda/conda-build/issues/4698
   beckermr:
+  beeankha: https://github.com/conda/conda-build/issues/4698
   chenghlee: https://github.com/conda/conda-build/issues/4698
   dbast: https://github.com/conda/conda-build/issues/4698
   dholth: https://github.com/conda/conda-build/issues/4698
@@ -28,9 +29,9 @@ members:
   mbargull: https://github.com/conda/conda-build/issues/4698
   msarahan: https://github.com/conda/conda-build/issues/4698
   ryanskeith: https://github.com/conda/conda-build/issues/4698
+  schuylermartin45: https://github.com/conda/governance/issues/128
   travishathaway: https://github.com/conda/conda-build/issues/4698
   wolfv: https://github.com/conda/conda-build/issues/4698
-  schuylermartin45: https://github.com/conda/governance/issues/128
 emeritus:
   Callek:
   danpetry: https://anaconda.slack.com/archives/C05B9MPGR4Y/p1713452484809289
