--- a/teams/conda/conda-maintainers-project-management.yml
+++ b/teams/conda/conda-maintainers-project-management.yml
@@ -1,6 +1,7 @@
 # yaml-language-server: $schema=../teams.schema.json
 name: conda/conda-maintainers-project-management
-description: Support team for @conda/conda-maintainers, with triage permissions only
+description: Support team for @conda/conda-maintainers, with triage permissions 
+  only
 charter: dynamic
 requirements:
 scopes:
@@ -8,9 +9,9 @@ scopes:
   other:
 links:
 members:
-  jezdez:
-  jaimergp:
   george-lorch:
+  jaimergp:
+  jezdez:
   lwinfree:
   trallard:
 emeritus:
